syntax = "proto3";

package storage;

option go_package = "/storage";

service FileStorage {
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
  rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message CreateFileRequest {
  bytes file = 1;
}

message CreateFileResponse {
  string id = 1;
}

message ReadFileRequest {
  string id = 1;
}

message ReadFileResponse {
  bytes file = 1;
}

message UpdateFileRequest {
  string id = 1;
  bytes file = 2;
}

message UpdateFileResponse {}

message DeleteFileRequest {
  string id = 1;
}

message DeleteFileResponse {}